# rayX

./: .gitmodules  LICENSE.txt  README.md
CppBackend/: CMakeLists.txt  entry.cu
CppBackend/classes/: image.cpp
CppBackend/classes/rendering/Scene/primitives/: triangle.cu  vector3.cu
CppBackend/pipelineComponents/IPC/: SuperIPC.cpp
CppBackend/pipelineComponents/IPC/DartIPC/: DartIPC.cpp
CppBackend/pipelineComponents/renderPipelines/: superPipeline.cpp
CppBackend/src/classes/misc/: customArgs.cpp
CppBackend/src/classes/rendering/Scene/: Scene.cu
CppBackend/src/classes/rendering/Scene/primitives/: Vertex.cu  plane.cu  ray.cu  triangle.cu
CppBackend/src/math/: coordinateGeometry.cu
CppBackend/src/pipelineComponents/renderPipelines/: superCamera.cu  superPipeline.cu
CppBackend/src/pipelineComponents/renderPipelines/wireframeRender/: wireframeRenderer.cu
